--- a/Instagram/Info.plist
+++ b/Instagram/Info.plist
@@ -58,5 +58,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>本アプリは画像の投稿及編集のため、カメラの使用許可を求めます。</string>
 </dict>
 </plist>
